create marketplace of 4 adoptable ocelots with order form and confirmation page.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="ocelot">
               <img src="img/ocelot3.jpg" alt="an ocelot" class="img-responsive"/>
-              <h3>Kuddles</h3>
+              <h3>Mew</h3>
               <p>
                 Here is some stuff about me...
               </p>
@@ -57,7 +57,7 @@
             </div>
             <div class="ocelot">
               <img src="img/ocelot4.jpg" alt="an ocelot" class="img-responsive"/>
-              <h3>Kuddles</h3>
+              <h3>Lancelot the Ocelot</h3>
               <p>
                 Here is some stuff about me...
               </p>
@@ -66,7 +66,7 @@
           </div>
         </div>
       </div>
-      <div id="order-form" class="">
+      <div id="order-form">
         <div class="row section-row">
           <div class="col-md-12">
             <h1>Provide your information:</h1>
@@ -74,7 +74,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
-            <form>
+            <form id="order-form">
               <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name" placeholder="Name">
@@ -90,6 +90,21 @@
               </div>
               <button type="submit" class="btn btn-info">Submit</button>
             </form>
+          </div>
+        </div>
+      </div>
+      <div id="confirmation">
+        <div class="row section-row">
+          <div class="col-md-12">
+            <h1>Adoption Confirmation:</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" id="confirmation">
+            <h2>Thank you for adopting <strong><span class="ocelot-name"></span></strong></h2>
+            <p>
+              <span class="ocelot-name"></span> should be arriving at your home in 7-10 days!
+            </p>
           </div>
         </div>
       </div>
